# TeaLeaf_ref

./: .gitignore  CMakeLists.txt  cache-preload.cmake  definitions.f90  field_summary.f90  generate_chunk.f90  initialise_chunk.f90  read_input.f90  set_field.f90  tea_leaf_cg.f90  tea_leaf_cheby.f90  tea_leaf_common.f90  tea_leaf_jacobi.f90  tea_leaf_ppcg.f90  update_halo.f90
kernels/: CMakeLists.txt  field_summary_kernel.cpp  field_summary_kernel.h  field_summary_kernel_cpp_module.F90  set_field_kernel.cpp  set_field_kernel.h  set_field_kernel_cpp_module.F90
test/: CMakeLists.txt  field_summary_kernel.inc  field_summary_kernel.pf  field_summary_kernel_cpp.inc  field_summary_kernel_cpp.pf  set_field_kernel.inc  set_field_kernel.pf  set_field_kernel_cpp.inc  set_field_kernel_cpp.pf
test/data/: CMakeLists.txt  field_summary_kernel_001.txt
